增加条件查询服务列表api，优化代码结构，增加对服务器监控信息的获取api
