# docs/swagger.yaml
@@ -1,12 +1,122 @@
 definitions:
-  entity.ResultModel:
+  entity.ComputerInfoModel:
     properties:
-      Code:
+      cpu_info:
+        items:
+          $ref: '#/definitions/entity.CpuInfoModel'
+        type: array
+      disk_info:
+        items:
+          $ref: '#/definitions/entity.DiskInfoModel'
+        type: array
+      host_info:
+        $ref: '#/definitions/entity.HostInfoModel'
+      mem_info:
+        $ref: '#/definitions/entity.MemInfoModel'
+      net_info:
+        items:
+          $ref: '#/definitions/entity.NetInfoModel'
+        type: array
+      pool_activate_num:
         type: integer
-      Data: {}
-      Message:
+      pool_job_num:
+        type: integer
+    type: object
+  entity.CpuInfoModel:
+    properties:
+      cpu_core_num:
+        type: string
+      cpu_frequency:
+        type: string
+      cpu_name:
+        type: string
+      cpu_physical_id:
+        type: string
+      cpu_usage:
+        type: string
+      cpu_vendor_id:
         type: string
     type: object
+  entity.DiskInfoModel:
+    properties:
+      disk_avi:
+        type: string
+      disk_name:
+        type: string
+      disk_size:
+        type: string
+      disk_usage:
+        type: string
+      disk_used:
+        type: string
+      fs_type:
+        type: string
+      opts:
+        type: string
+    type: object
+  entity.HostInfoModel:
+    properties:
+      host_id:
+        type: string
+      host_kernel_arch:
+        type: string
+      host_kernel_version:
+        type: string
+      host_name:
+        type: string
+      host_os:
+        type: string
+      host_os_version:
+        type: string
+    type: object
+  entity.MemInfoModel:
+    properties:
+      mem_avi:
+        type: string
+      mem_total:
+        type: string
+      mem_usage:
+        type: string
+      mem_used:
+        type: string
+    type: object
+  entity.NetInfoModel:
+    properties:
+      bytes_received:
+        type: string
+      bytes_sent:
+        type: string
+      net_name:
+        type: string
+      packets_received:
+        type: string
+      packets_sent:
+        type: string
+    type: object
+  entity.ResultModel:
+    properties:
+      code:
+        type: integer
+      data: {}
+      message:
+        type: string
+    type: object
+  entity.ServerModel:
+    properties:
+      IP:
+        type: string
+      colony:
+        type: string
+      name:
+        type: string
+      namespace:
+        type: string
+      port:
+        type: string
+      time:
+        type: string
+    type: object
+host: localhost:8080
 info:
   contact:
     email: 1539989223@qq.com
@@ -27,22 +137,22 @@ paths:
       description: 由领导者调用的新一轮选举接口。
       parameters:
       - in: query
-        name: Colony
-        type: string
-      - in: query
         name: IP
         type: string
       - in: query
-        name: Name
+        name: colony
         type: string
       - in: query
-        name: Namespace
+        name: name
         type: string
       - in: query
-        name: Port
+        name: namespace
         type: string
       - in: query
-        name: Time
+        name: port
+        type: string
+      - in: query
+        name: time
         type: string
       produces:
       - application/json
@@ -57,17 +167,41 @@ paths:
       tags:
       - 服务层
   /api/v1/message/getLeader:
-    get:
+    post:
       consumes:
       - application/json
       description: 由其他服务调用的获取当前领导者接口。
+      parameters:
+      - in: query
+        name: IP
+        type: string
+      - in: query
+        name: colony
+        type: string
+      - in: query
+        name: name
+        type: string
+      - in: query
+        name: namespace
+        type: string
+      - in: query
+        name: port
+        type: string
+      - in: query
+        name: time
+        type: string
       produces:
       - application/json
       responses:
         "200":
           description: 返回领导者服务信息
           schema:
-            $ref: '#/definitions/entity.ResultModel'
+            allOf:
+            - $ref: '#/definitions/entity.ResultModel'
+            - properties:
+                data:
+                  $ref: '#/definitions/entity.ServerModel'
+              type: object
       security:
       - ApiKeyAuth: []
       summary: 获取领导者
@@ -78,13 +212,39 @@ paths:
       consumes:
       - application/json
       description: 由当前领导者调用的获取领导者所领导的服务列表。
+      parameters:
+      - in: query
+        name: IP
+        type: string
+      - in: query
+        name: colony
+        type: string
+      - in: query
+        name: name
+        type: string
+      - in: query
+        name: namespace
+        type: string
+      - in: query
+        name: port
+        type: string
+      - in: query
+        name: time
+        type: string
       produces:
       - application/json
       responses:
         "200":
           description: 返回被领导者的切片数组
           schema:
-            $ref: '#/definitions/entity.ResultModel'
+            allOf:
+            - $ref: '#/definitions/entity.ResultModel'
+            - properties:
+                data:
+                  items:
+                    $ref: '#/definitions/entity.ServerModel'
+                  type: array
+              type: object
       security:
       - ApiKeyAuth: []
       summary: 获取当前被领导者服务列表
@@ -97,22 +257,22 @@ paths:
       description: 服务心跳重置倒计时
       parameters:
       - in: query
-        name: Colony
-        type: string
-      - in: query
         name: IP
         type: string
       - in: query
-        name: Name
+        name: colony
         type: string
       - in: query
-        name: Namespace
+        name: name
         type: string
       - in: query
-        name: Port
+        name: namespace
         type: string
       - in: query
-        name: Time
+        name: port
+        type: string
+      - in: query
+        name: time
         type: string
       produces:
       - application/json
@@ -133,22 +293,22 @@ paths:
       description: 服务注册进中心
       parameters:
       - in: query
-        name: Colony
-        type: string
-      - in: query
         name: IP
         type: string
       - in: query
-        name: Name
+        name: colony
         type: string
       - in: query
-        name: Namespace
+        name: name
         type: string
       - in: query
-        name: Port
+        name: namespace
         type: string
       - in: query
-        name: Time
+        name: port
+        type: string
+      - in: query
+        name: time
         type: string
       produces:
       - application/json
@@ -169,22 +329,22 @@ paths:
       description: 由管理者调用删除黑名单中的实例信息。
       parameters:
       - in: query
-        name: Colony
-        type: string
-      - in: query
         name: IP
         type: string
       - in: query
-        name: Name
+        name: colony
         type: string
       - in: query
-        name: Namespace
+        name: name
         type: string
       - in: query
-        name: Port
+        name: namespace
         type: string
       - in: query
-        name: Time
+        name: port
+        type: string
+      - in: query
+        name: time
         type: string
       produces:
       - application/json
@@ -205,22 +365,22 @@ paths:
       description: 由管理者调用删除地区集群实例并拉入黑名单。
       parameters:
       - in: query
-        name: Colony
-        type: string
-      - in: query
         name: IP
         type: string
       - in: query
-        name: Name
+        name: colony
         type: string
       - in: query
-        name: Namespace
+        name: name
         type: string
       - in: query
-        name: Port
+        name: namespace
         type: string
       - in: query
-        name: Time
+        name: port
+        type: string
+      - in: query
+        name: time
         type: string
       produces:
       - application/json
@@ -241,22 +401,22 @@ paths:
       description: 由管理者调用删除服务实例并拉入黑名单。
       parameters:
       - in: query
-        name: Colony
-        type: string
-      - in: query
         name: IP
         type: string
       - in: query
-        name: Name
+        name: colony
         type: string
       - in: query
-        name: Namespace
+        name: name
         type: string
       - in: query
-        name: Port
+        name: namespace
         type: string
       - in: query
-        name: Time
+        name: port
+        type: string
+      - in: query
+        name: time
         type: string
       produces:
       - application/json
@@ -281,7 +441,14 @@ paths:
         "200":
           description: 返回黑名单中服务实例切片数组
           schema:
-            $ref: '#/definitions/entity.ResultModel'
+            allOf:
+            - $ref: '#/definitions/entity.ResultModel'
+            - properties:
+                data:
+                  items:
+                    $ref: '#/definitions/entity.ServerModel'
+                  type: array
+              type: object
       security:
       - ApiKeyAuth: []
       summary: 获取全部黑名单服务实例
@@ -298,10 +465,40 @@ paths:
         "200":
           description: 返回服务实例切片数组
           schema:
-            $ref: '#/definitions/entity.ResultModel'
+            allOf:
+            - $ref: '#/definitions/entity.ResultModel'
+            - properties:
+                data:
+                  items:
+                    $ref: '#/definitions/entity.ServerModel'
+                  type: array
+              type: object
       security:
       - ApiKeyAuth: []
       summary: 获取全部服务实例
+      tags:
+      - 管理层
+    post:
+      consumes:
+      - application/json
+      description: 由获取命名空间与集群条件下的服务实例服务实例。
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 返回服务实例切片数组
+          schema:
+            allOf:
+            - $ref: '#/definitions/entity.ResultModel'
+            - properties:
+                data:
+                  items:
+                    $ref: '#/definitions/entity.ServerModel'
+                  type: array
+              type: object
+      security:
+      - ApiKeyAuth: []
+      summary: 获取指定条件下的服务实例服务实例
       tags:
       - 管理层
   /api/v1/operator/getStatus:
@@ -313,9 +510,14 @@ paths:
       - application/json
       responses:
         "200":
-          description: 返回运行线程数与当前任务数
+          description: 返回电脑状态
           schema:
-            $ref: '#/definitions/entity.ResultModel'
+            allOf:
+            - $ref: '#/definitions/entity.ResultModel'
+            - properties:
+                data:
+                  $ref: '#/definitions/entity.ComputerInfoModel'
+              type: object
       security:
       - ApiKeyAuth: []
       summary: 获取服务状态
