# src/controller/ManagerController.go
@@ -9,14 +9,14 @@ import (
 )
 
 // GetController
-// @Summary 获取全部服务实例
+// @Summary     获取全部服务实例
 // @Description 由管理者调用的获取当前所有服务信息。
-// @Tags 管理层
-// @Accept application/json
-// @Produce application/json
-// @Security ApiKeyAuth
-// @Success 200 {object} entity.ResultModel "返回服务实例切片数组"
-// @Router /api/v1/operator/getInstances [get]
+// @Tags        管理层
+// @Accept      application/json
+// @Produce     application/json
+// @Security    ApiKeyAuth
+// @Success     200 {object} entity.ResultModel{data=[]entity.ServerModel} "返回服务实例切片数组"
+// @Router      /api/v1/operator/getInstances [get]
 func GetController(c *gin.Context) {
 	servers, err := service.GetInstances()
 	if err != nil {
@@ -26,16 +26,41 @@ func GetController(c *gin.Context) {
 	c.JSON(http.StatusOK, entity.NewSuccessResult(servers))
 }
 
+// GetPostController
+// @Summary     获取指定条件下的服务实例服务实例
+// @Description 由获取命名空间与集群条件下的服务实例服务实例。
+// @Tags        管理层
+// @Accept      application/json
+// @Produce     application/json
+// @Security    ApiKeyAuth
+// @Success     200 {object} entity.ResultModel{data=[]entity.ServerModel} "返回服务实例切片数组"
+// @Router      /api/v1/operator/getInstances [POST]
+func GetPostController(c *gin.Context) {
+	Server := entity.NewServerModel()
+	err := c.BindJSON(Server)
+	if err != nil {
+		exception.HandleException(exception.NewUserError("DeleteInstanceController", "参数绑定错误-"+err.Error()))
+		c.JSON(http.StatusOK, entity.NewFalseResult("false", "参数绑定错误-"+err.Error()))
+		return
+	}
+	namespaces, err := service.GetInstancesByNamespaceAndColony(Server)
+	if err != nil {
+		Handle(err, c)
+		return
+	}
+	c.JSON(http.StatusOK, entity.NewSuccessResult(namespaces))
+}
+
 // DeleteInstanceController
-// @Summary 删除服务实例并拉入黑名单
+// @Summary     删除服务实例并拉入黑名单
 // @Description 由管理者调用删除服务实例并拉入黑名单。
-// @Tags 管理层
-// @Accept application/json
-// @Produce application/json
-// @Security ApiKeyAuth
-// @Param Model query entity.ServerModel true "被删除的服务实例信息"
-// @Success 200 {object} entity.ResultModel "返回true或false"
-// @Router /api/v1/operator/election [delete]
+// @Tags        管理层
+// @Accept      application/json
+// @Produce     application/json
+// @Security    ApiKeyAuth
+// @Param       Model query    entity.ServerModel true "被删除的服务实例信息"
+// @Success     200   {object} entity.ResultModel "返回true或false"
+// @Router      /api/v1/operator/election [delete]
 func DeleteInstanceController(c *gin.Context) {
 	Server := entity.NewServerModel()
 	err := c.BindJSON(Server)
@@ -64,15 +89,15 @@ func DeleteInstanceController(c *gin.Context) {
 }
 
 // DeleteColonyController
-// @Summary 删除地区集群实例并拉入黑名单
+// @Summary     删除地区集群实例并拉入黑名单
 // @Description 由管理者调用删除地区集群实例并拉入黑名单。
-// @Tags 管理层
-// @Accept application/json
-// @Produce application/json
-// @Security ApiKeyAuth
-// @Param Model query entity.ServerModel true "被删除的服务地区信息（用服务实例信息包装）"
-// @Success 200 {object} entity.ResultModel "返回true或false"
-// @Router /api/v1/operator/deleteColony [delete]
+// @Tags        管理层
+// @Accept      application/json
+// @Produce     application/json
+// @Security    ApiKeyAuth
+// @Param       Model query    entity.ServerModel true "被删除的服务地区信息（用服务实例信息包装）"
+// @Success     200   {object} entity.ResultModel "返回true或false"
+// @Router      /api/v1/operator/deleteColony [delete]
 func DeleteColonyController(c *gin.Context) {
 	Server := entity.NewServerModel()
 	err := c.BindJSON(Server)
@@ -81,7 +106,7 @@ func DeleteColonyController(c *gin.Context) {
 		c.JSON(http.StatusOK, entity.NewFalseResult("false", "参数绑定错误-"+err.Error()))
 		return
 	}
-	Assert, err1 := service.DeleteColony(Server)
+	Assert, err1 := service.DeleteColonyServer(Server)
 	if err1 != nil {
 		Handle(err1, c)
 		return
@@ -91,16 +116,16 @@ func DeleteColonyController(c *gin.Context) {
 }
 
 // GetDeleteInstanceController
-// @Summary 获取全部黑名单服务实例
+// @Summary     获取全部黑名单服务实例
 // @Description 由管理者调用的获取当前全部黑名单服务实例
-// @Tags 管理层
-// @Accept application/json
-// @Produce application/json
-// @Security ApiKeyAuth
-// @Success 200 {object} entity.ResultModel "返回黑名单中服务实例切片数组"
-// @Router /api/v1/operator/getDeleteInstance [get]
+// @Tags        管理层
+// @Accept      application/json
+// @Produce     application/json
+// @Security    ApiKeyAuth
+// @Success     200 {object} entity.ResultModel{data=[]entity.ServerModel} "返回黑名单中服务实例切片数组"
+// @Router      /api/v1/operator/getDeleteInstance [get]
 func GetDeleteInstanceController(c *gin.Context) {
-	servers, err := service.GetDeleteInstances()
+	servers, err := service.GetBlacklistServer()
 	if err != nil {
 		Handle(err, c)
 		return
@@ -109,15 +134,15 @@ func GetDeleteInstanceController(c *gin.Context) {
 }
 
 // CancelDeleteInstanceController
-// @Summary 删除黑名单中的实例信息
+// @Summary     删除黑名单中的实例信息
 // @Description 由管理者调用删除黑名单中的实例信息。
-// @Tags 管理层
-// @Accept application/json
-// @Produce application/json
-// @Security ApiKeyAuth
-// @Param Model query entity.ServerModel true "从黑名单中清除的实例信息"
-// @Success 200 {object} entity.ResultModel "返回true或false"
-// @Router /api/v1/operator/cancelDeleteInstance [delete]
+// @Tags        管理层
+// @Accept      application/json
+// @Produce     application/json
+// @Security    ApiKeyAuth
+// @Param       Model query    entity.ServerModel true "从黑名单中清除的实例信息"
+// @Success     200   {object} entity.ResultModel "返回true或false"
+// @Router      /api/v1/operator/cancelDeleteInstance [delete]
 func CancelDeleteInstanceController(c *gin.Context) {
 	Server := entity.NewServerModel()
 	err := c.BindJSON(Server)
@@ -132,7 +157,7 @@ func CancelDeleteInstanceController(c *gin.Context) {
 		return
 	}
 	if Assert1 {
-		Assert2, err2 := service.DeleteDeleteInstance(Server)
+		Assert2, err2 := service.DeleteInstanceFromBlacklist(Server)
 		if err2 != nil {
 			Handle(err2, c)
 			return
@@ -144,22 +169,19 @@ func CancelDeleteInstanceController(c *gin.Context) {
 }
 
 // GetStatusController
-// @Summary 获取服务状态
+// @Summary     获取服务状态
 // @Description 由管理员调用获取当前中心线程数
-// @Tags 管理层
-// @Accept application/json
-// @Produce application/json
-// @Security ApiKeyAuth
-// @Success 200 {object} entity.ResultModel "返回运行线程数与当前任务数"
-// @Router /api/v1/operator/getStatus	[get]
+// @Tags        管理层
+// @Accept      application/json
+// @Produce     application/json
+// @Security    ApiKeyAuth
+// @Success     200 {object} entity.ResultModel{data=entity.ComputerInfoModel} "返回电脑状态"
+// @Router      /api/v1/operator/getStatus [get]
 func GetStatusController(c *gin.Context) {
-	activeNum, jobNum, err := service.GetCenterStatus()
+	computer, err := service.GetCenterStatus()
 	if err != nil {
 		Handle(err, c)
 		return
 	}
-	c.JSON(http.StatusOK, entity.NewSuccessResult(map[string]interface{}{
-		"activeNum": activeNum,
-		"jobNum":    jobNum,
-	}))
+	c.JSON(http.StatusOK, entity.NewSuccessResult(computer))
 }
