# src/entity/ServerModel.go
@@ -2,11 +2,11 @@ package entity
 
 type ServerModel struct {
 	IP        string `json:"IP"`
-	Port      string `json:"Port"`
-	Name      string `json:"Name"`
-	Time      string `json:"Time"`
-	Colony    string `json:"Colony"`
-	Namespace string `json:"Namespace"`
+	Port      string `json:"port"`
+	Name      string `json:"name"`
+	Time      string `json:"time"`
+	Colony    string `json:"colony"`
+	Namespace string `json:"namespace"`
 }
 
 func NewServerModel() *ServerModel {
